@@ -1,3 +1,8 @@
+2009-04-01  Jakub Jelinek  <jakub@redhat.com>
+
+	PR target/39226
+	* gcc.dg/pr39226.c: New test.
+
 2009-04-01  H.J. Lu  <hongjiu.lu@intel.com>
 
 	Backport from mainline:
